# QTColne

./: README.md
src/: CMakeLists.txt  button.cpp  button.h  color.cpp  color.h  main.cpp  window.cpp  window.h
